# baseline-miner

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
baseline_miner/: bench.py  cli.py  gpu.py  gpu_miner.py  miner.py  stratum.py
baseline_miner/native/: sha256d.c
baseline_miner/opencl/: __init__.py  sha256d.cl
tests/: test_gpu.py  test_miner_header.py  test_stratum.py
