[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-miner"
version = "0.1.0"
description = "High-performance Stratum miner for Baseline pools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "crosschainer"}]

[project.optional-dependencies]
gpu = [
    "pyopencl>=2022.1",
    "numpy>=1.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pyopencl>=2022.1",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Baseline-Blockchain/baseline-miner"

[project.scripts]
baseline-miner = "baseline_miner.cli:main"
baseline-miner-bench = "baseline_miner.bench:main"
